--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,3 +6,11 @@ services:
     ports:
       - 8080:8080
     command: npm run dev
+  caddy:
+    image: caddy:latest
+    restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - $PWD/services/caddy/Caddyfile:/etc/caddy/Caddyfile
