--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,6 +16,9 @@ jobs:
       -
         uses: actions/checkout@v3
       -
+        name: Prepear env
+        run: cd ./app && make prepare-env
+      -
         name: Run tests
         run: make test
   docker:
