Update compose files

--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "prestart": "NODE_ENV=production npm run migrate",
     "start": "NODE_ENV=production fastify start -a 0.0.0.0 -p 8080 -l info app.js",
     "predev": "npm run migrate",
+    "check-script": "echo $NODE_ENV",
     "dev": "fastify start -a 0.0.0.0 -p 8080 -w -l info -P app.js"
   },
   "repository": {
