--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,8 +16,8 @@ jobs:
       -
         uses: actions/checkout@v3
       -
-        name: Prepear env
-        run: cd ./app && make prepare-env
+        name: Prepare env
+        run: make prepare-env
       -
         name: Run tests
         run: make test
