--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,10 +1,8 @@
-FROM node:14.18.1
+FROM node:14.18.1-alpine
 
 WORKDIR /app
 
-# Важно для кеширования слоев
-COPY app/package.json package.json
-COPY app/package-lock.json package-lock.json
+COPY app/package*.json ./
 
 RUN npm ci
 
